<resources>
    <string name="app_name">Location Reminders</string>
    <string name="error_happened">Error happened</string>
    <string name="retry">Retry</string>
    <string name="no_data">No Data</string>
    <string name="reminder_title">Reminder Title</string>
    <string name="reminder_desc">Description</string>
    <string name="reminder_location">Reminder Location</string>
    <string name="save">Save</string>
    <string name="reminder_saved">Reminder Saved !</string>
    <string name="logout">Logout</string>
    <string name="welcome_to_the_location_reminder_app">Welcome to the location reminder app</string>
    <string name="login">Login</string>
    <string name="title_activity_maps">Map</string>
    <string name="normal_map">Normal Map</string>
    <string name="hybrid_map">Hybrid Map</string>
    <string name="satellite_map">Satellite Map</string>
    <string name="terrain_map">Terrain Map</string>
    <string name="lat_long_snippet">Location at: %1$.5f, %2$.5f</string>
    <string name="dropped_pin">Dropped Pin</string>
    <string name="poi">poi</string>
    <string name="location_required_error">Location services must be enabled to use the app
    Please open the location settings and enable location services</string>
    <string name="permission_denied_explanation">You need to grant location permission in order to select the location.</string>
    <string name="settings">Settings</string>
    <string name="select_poi">Please select a point of interest</string>
    <string name="geofence_entered">Geofence Entered</string>
    <string name="channel_name">GeofenceStatus</string>
    <string name="notification_channel_description">Geofence status notification</string>
    <string name="content_text">Location Reminder</string>
    <string name="select_title">Please select title</string>
    <string name="select_location">Please select location</string>
    <string name="geofences_not_added">Problem in adding geofences.</string>
    <string name="welcome">Welcome</string>
    <string name="err_enter_title">Please enter title</string>
    <string name="err_select_location">Please select location</string>

    <!-- Error strings -->
    <string name="geofence_unknown_error">Unknown error: the Geofence service is not available now.</string>
    <string name="geofence_not_available">Geofence service is not available now. Go to Settings>Location>Mode and choose High accuracy.</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences.</string>
    <string name="geofence_too_many_pending_intents">You have provided too many PendingIntents to the addGeofences() call.</string>
    <string name="error_adding_geofence">Error Happened, Can\'t Add Geofence</string>
    <string name="add_remider_button">Add Remider button</string>
    <string name="login_button">Login</string>
    <string name="invalid_login_message">Invalid Login please try again</string>
    <string name="gooogle">Gooogle</string>
    <string name="email_pass">email/pass</string>
    <string name="how_you_want_to_log_in">How do you want to log in?</string>
    <string name="background_educational_message">Getting the location in the background helps tracking your location and activate the reminder when you reach that location</string>
    <string name="foreground_educational_message">Location permission will help us center the map on your location</string>
    <string name="unknown_geofence_error">
        Unknown error: the Geofence service is not available now
    </string>
    <string name="geofence_transition_invalid_type">invalid transition type: %d</string>
    <string name="background_open_settings_message">open permission settings and select \'all time\' option</string>
    <string name="reminder_deleted">reminder deleted</string>
    <string name="geofence_added">geofence added</string>
    <string name="could_not_add_geofence">Could not add the Geo fence</string>
    <string name="tv_reminder_title">Reminder Title</string>
    <string name="tv_location_name">Location Name</string>
    <string name="tv_coordinates">Coordinates</string>
    <string name="tv_reminder_description">Reminder Description</string>
    <string name="tv_location_coordinatest_str">%f, %f</string>

    <string name="btn_ok">OK</string>
    <string name="btn_select_location">select Location</string>

    <string name="select_location_educational_msg">Please select a location and press \'%s\' button</string>
    <string name="map_image">Map Image</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="err_could_not_add_geofence">Could not add the Geofence because of this error : %s</string>
    <string name="err_could_not_save_geofence">Could not save the Geofence because location service is not enabled </string>
</resources>